adjust subtitle font size and paragraph style and content for intro hero

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -15,8 +15,7 @@
     "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
       "PARAGRAPH": {
-        "PART_1": "Новото предизвикателство те очаква!",
-        "PART_2": "душа."
+        "PART_1": "\"Твоето тяло, твоето предизвикателство, твоят успех!\""
       },
       "GET_IN_TOUCH": "Контакти",
       "MIDDLE_HEADING": "Защо да ни се доверите?",
