--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -15,8 +15,7 @@
     "HOME": {
       "SUBTITLE": "The change in your body!",
       "PARAGRAPH": {
-        "PART_1": "The new challenge awaits!",
-        "PART_2": "soul."
+        "PART_1": "\"Your body, your challenge, your success!\""
       },
       "GET_IN_TOUCH": "Get in Touch",
       "MIDDLE_HEADING": "Why should You put your trust in us?",
