--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -148,6 +148,11 @@
         "SUBMIT": "Send"
       }
     },
+    "NOT_FOUND": {
+      "TITLE": "Page not found",
+      "PARAGRAPH": "Sorry, the page you're looking for doesn't exist.",
+      "BTN": "Go to Homepage"
+    },
     "FOOTER": {
       "ABOUT_US": "About Us",
       "ABOUT_US_DESCRIPTION": "At our Pilates studio, we believe in movement with purpose. Our certified instructors are passionate about helping you build strength, flexibility, and balance—both in body and mind. Whether you're a beginner or experienced, our welcoming space is here to support your journey to a healthier, more graceful you.",
