adjust font size for paragraph in intro hero

--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -14,9 +14,7 @@
     },
     "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
-      "PARAGRAPH": {
-        "PART_1": "\"Твоето тяло, твоето предизвикателство, твоят успех!\""
-      },
+      "PARAGRAPH": "\"Твоето тяло, твоето предизвикателство, твоят успех!\"",
       "GET_IN_TOUCH": "Контакти",
       "MIDDLE_HEADING": "Защо да ни се доверите?",
       "MIDDLE_PARAGRAPH": "а сега е вереме за Вас!",
@@ -113,7 +111,7 @@
       },
       "SCHEDULE": {
         "TITLE": "Работно време",
-        "DAYS" : {
+        "DAYS": {
           "TITLE": "Дни",
           "TIME": "Време",
           "MONDAY": "Понеделник",
@@ -121,7 +119,7 @@
           "WEDNESDAY": "Сряда",
           "THURSDAY": "Четвъръък",
           "FRIDAY": "Петък",
-          "SAT_SUN":"Събота и Неделя"
+          "SAT_SUN": "Събота и Неделя"
         }
       }
     },
@@ -272,7 +270,7 @@
       },
       "SCHEDULE": {
         "TITLE": "Работно време",
-        "DAYS" : {
+        "DAYS": {
           "TITLE": "Дни",
           "TIME": "Време",
           "MONDAY_FRI": "Понеделник - Петък",
@@ -280,7 +278,7 @@
           "WEDNESDAY": "Сряда",
           "THURSDAY": "Четвъръък",
           "FRIDAY": "Петък",
-          "SAT_SUN":"Събота и Неделя"
+          "SAT_SUN": "Събота и Неделя"
         }
       },
       "ERRORS": {
@@ -289,7 +287,7 @@
           "TITLE_FAILURE": "Грешка при изпращането",
           "SUCCESS_DESCRIPTION": "Вашата заявка беше изпратена успешно, ще се свържем с Вас при първа възможност!",
           "FAILURE_DESCRIPTION": "Нещо се обърка, моля опитайте отново по-късно.",
-          "SUCCESS_REVIEW":"Благодарим за Вашата обратна връзка. Мнението Ви е важно за нас!",
+          "SUCCESS_REVIEW": "Благодарим за Вашата обратна връзка. Мнението Ви е важно за нас!",
           "BUTTON": "Затвори"
         }
       }
