--- a/src/assets/i18n/main-en.json
+++ b/src/assets/i18n/main-en.json
@@ -14,9 +14,7 @@
     },
     "HOME": {
       "SUBTITLE": "The change in your body!",
-      "PARAGRAPH": {
-        "PART_1": "\"Your body, your challenge, your success!\""
-      },
+      "PARAGRAPH": "\"Your body, your challenge, your success!\"",
       "GET_IN_TOUCH": "Get in Touch",
       "MIDDLE_HEADING": "Why should You put your trust in us?",
       "MIDDLE_DESCRIPTION": "At our Pilates studio, we believe in the power of mindful movement. Our certified instructors not only bring deep knowledge and experience but also a true passion for inspiring and supporting each individual on their journey to inner and outer harmony. With great attention to detail and a personalized approach, we create an environment where the body is strengthened, the mind is calmed, and the spirit is uplifted. Whether you're just beginning or seeking a new challenge, you’ll find a safe, welcoming, and inspiring space to nurture a healthier, stronger, and more graceful version of yourself.",
