--- a/src/assets/i18n/main-bg.json
+++ b/src/assets/i18n/main-bg.json
@@ -14,7 +14,7 @@
     },
     "HOME": {
       "SUBTITLE": "Промяната в твоето тяло!",
-      "PARAGRAPH": "\"Твоят трансформация, твоето предизвикателство, твоят успех!\"",
+      "PARAGRAPH": "\"Твоята трансформация, твоето предизвикателство, твоят успех!\"",
       "GET_IN_TOUCH": "Контакти",
       "MIDDLE_HEADING": "Защо да ни се доверите?",
       "MIDDLE_PARAGRAPH": "а сега е вереме за Вас!",
